ENOP-1068 Fixed order text overlapping

--- a/src/Resources/app/storefront/src/scss/component/_b2b-order-search.scss
+++ b/src/Resources/app/storefront/src/scss/component/_b2b-order-search.scss
@@ -138,13 +138,16 @@
     }
 
     [class*="col"] {
-      display: flex;
-      align-items: center;
-      padding: 16px;
+      overflow: hidden;
+      padding: 16px 8px 16px 16px;
+      text-overflow: ellipsis;
 
       &:last-child {
         display: flex;
         justify-content: center;
+        overflow: unset;
+        padding: 16px;
+        text-overflow: unset;
       }
 
       &:nth-last-child(2) {
